--- a/assets/index.html
+++ b/assets/index.html
@@ -45,3 +45,13 @@
 ​
     <!--End of Nav-bar-->
 
+<div class="row">
+        <div class="col-12">
+            <h1 class="main-tagline text-center"><em>Welcome to your next treatment</em></h1>
+        </div>
+    </div>
+<div class="row">
+        <div class="col-12 image">
+            <img src="assets/css/images/home-pic.jpg"/>
+        </div>
+    </div>
