adding some content

--- a/assets/index.html
+++ b/assets/index.html
@@ -55,3 +55,27 @@
             <img src="assets/css/images/home-pic.jpg"/>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-lg-4">
+            <p class="home-page">We provide best quality service and products.
+             NAIL TREATMENTS :
+             Manicures,
+            Pedicures,
+            Gel extensions.</p>
+        </div>
+        <div class="col-12 col-lg-4">
+            <p class="home-page">FACE TREATMENTS:
+            Eyebrow Shape,
+            Eyebrow Tint,
+            Dermalogica Facials.
+          </p>
+        </div>
+        <div class="col-12 col-lg-4">
+            <p class="home-page">HAIR TREATMENTS:
+            Blowdry,
+            Haircut,
+            Highlights,
+              Colour.
+              </p>
+        </div>
+    </div>
