--- a/assets/index.html
+++ b/assets/index.html
@@ -79,3 +79,13 @@
               </p>
         </div>
     </div>
+    <footer class="row bordered mt-3">
+        <div class="col-12 col-lg-4 mt-2">
+            <p class="footer">Address line 1.</p>
+            <p class="footer">Address line 2.</p>
+            <p class="footer">Cork</p>
+            <p class="footer">Ireland</p>
+        </div>
+        <div class="col-12 col-lg-4 mt-2">
+            <p class="footer">"Walked in looking like the beast, left looking like beauty". Isabelle Smiley</p>
+        </div>
