added social networks in footer

--- a/assets/index.html
+++ b/assets/index.html
@@ -89,3 +89,12 @@
         <div class="col-12 col-lg-4 mt-2">
             <p class="footer">"Walked in looking like the beast, left looking like beauty". Isabelle Smiley</p>
         </div>
+        <div class="col-12 col-lg-4 mt-2">
+            <p class="footer">Our Facebook</p>
+            <p class="footer">Instgram</p>
+            <p class="footer">Linkedin</p>
+        </div>
+​
+    </footer>
+</div>
+</body>
