--- a/assets/index.html
+++ b/assets/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+                <!------------------head--------------->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<!--Navbar Section Imported from Bootstrap-->
+                       <!--Navbar Section Imported from Bootstrap-->
 <div class="container">
     <div class="row">
         <div class="col-12">
@@ -43,7 +44,7 @@
         </div>
     </div>
 ​
-    <!--End of Nav-bar-->
+                                            <!--End of Nav-bar-->
 
 <div class="row">
         <div class="col-12">
@@ -56,7 +57,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-4">
+        <div class="col-12 col-lg-4">     <!-------------------home-page-------------->
             <p class="home-page">We provide best quality service and products.
              NAIL TREATMENTS :
              Manicures,
@@ -78,7 +79,7 @@
               Colour.
               </p>
         </div>
-    </div>
+    </div>        <!-------------------------footer---------------->
     <footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
             <p class="footer">Address line 1.</p>
@@ -97,7 +98,8 @@
 ​
     </footer>
 </div>
-</body>
+</body>        
+                       <!------------------------script--------------->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
