--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-12">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#n">Beauty Salon</a>
+                <a class="navbar-brand" href="#">Beauty Salon</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,7 +98,7 @@
 ​
     </footer>
 </div>
-</body>        
+      
                        <!------------------------script--------------->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
