--- a/assets/index.html
+++ b/assets/index.html
@@ -82,8 +82,8 @@
     </div>        <!-------------------------footer---------------->
     <footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">Address line 1.</p>
-            <p class="footer">Address line 2.</p>
+            <p class="footer">Georges Quay</p>
+            <p class="footer">City</p>
             <p class="footer">Cork</p>
             <p class="footer">Ireland</p>
         </div>
