added icons for social networks

--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
     <footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
             <p class="footer">Georges Quay</p>
-            <p class="footer">City</p>
+            <p class="footer">City Center</p>
             <p class="footer">Cork</p>
             <p class="footer">Ireland</p>
         </div>
@@ -82,9 +82,9 @@
             <p class="footer">"Walked in looking like the beast, left looking like beauty". Isabelle Smiley</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">Our Facebook</p>
-            <p class="footer">Instgram</p>
-            <p class="footer">Linkedin</p>
+            <p class="footer">Facebook <i class="fa fa-facebook" style="font-size:2.4rem;"></i></p>
+            <p class="footer">Instagram <i class="fa fa-instagram" style="font-size:2.4rem;"></i></p>
+            <p class="footer">Youtube <i class="fa fa-youtube" style="font-size:2.4rem;"></i></p>
         </div>
 ​
     </footer>
