--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="row">
         <div class="col-12">
-            <h1 class="main-tagline text-center"><em>Our responsibility to make you beautiful.</em></h1>
+            <h1 class="main-tagline text-center"><em>The place for all your beauty needs</em></h1>
         </div>
     </div>
 <div class="row">
@@ -92,9 +92,9 @@
             <p class="footer">"Walked in looking like the beast, left looking like beauty". Isabelle Smiley</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">Facebook <i class="fa fa-facebook" style="font-size:2.4rem;"></i></p>
-            <p class="footer">Instagram <i class="fa fa-instagram" style="font-size:2.4rem;"></i></p>
-            <p class="footer">Youtube <i class="fa fa-instagram" style="font-size:2.4rem;"></i></p>
+            <p class="footer">Facebook <i class="fa fa-facebook" style="font-size:2.4rem;color:lightblue;"></i></p>
+            <p class="footer">Instagram <i class="fa fa-instagram" style="font-size:2.4rem;color:lightblue;"></i></p>
+            <p class="footer">Youtube <i class="fa fa-instagram" style="font-size:2.4rem;color:lightblue;"></i></p>
         </div>
 ​
     </footer>
