--- a/index.html
+++ b/index.html
@@ -59,24 +59,34 @@
     </div>
     <div class="row">
         <div class="col-12 col-lg-4">     <!-------------------home-page-------------->
-            <p class="home-page">We provide best quality service and products.
+            <p class="home-page">We provide best quality service and products. Your happiness is our goal.
              NAIL TREATMENTS :
-             Manicures,
-            Pedicures,
+
+             Manicures   
+
+            Pedicures
+
             Gel extensions.</p>
         </div>
         <div class="col-12 col-lg-4">
             <p class="home-page">FACE TREATMENTS:
-            Eyebrow Shape,
-            Eyebrow Tint,
+
+            Eyebrow Shape
+
+            Eyebrow Tint
+
             Dermalogica Facials.
           </p>
         </div>
         <div class="col-12 col-lg-4">
             <p class="home-page">HAIR TREATMENTS:
-            Blowdry,
-            Haircut,
-            Highlights,
+
+            Blowdry
+
+            Haircuts
+
+            Highlights 
+            
               Colour.
               </p>
         </div>
@@ -89,7 +99,9 @@
             <p class="footer">Ireland</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">"Walked in looking like the beast, left looking like beauty". Isabelle Smiley</p>
+            <p class="footer">"You are in a beauty contest every day of your life
+            
+            Treat Yourself"</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
             <p class="footer">Facebook <i class="fa fa-facebook" style="font-size:2.4rem;color:lightblue;"></i></p>
