changed footer text

--- a/contact.html
+++ b/contact.html
@@ -131,12 +131,13 @@
             <p class="footer">Ireland</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">"Walked in looking like the beast, left looking like beauty". Isabelle Smiley</p>
+            <p class="footer">"You are in a beauty contest every day of your life Treat Yourself"</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">Facebook <i class="fa fa-facebook" style="font-size:2.4rem;"></i></p>
-            <p class="footer">Instagram <i class="fa fa-instagram" style="font-size:2.4rem;"></i></p>
-            <p class="footer">Youtube <i class="fa fa-youtube" style="font-size:2.4rem;"></i></p>
+            <p class="footer">Facebook <i class="fa fa-facebook" style="font-size:2.4rem;color:lightblue;"></i></p>
+            <p class="footer">Instagram <i class="fa fa-instagram" style="font-size:2.4rem;color:lightblue;"></i></p>
+            <p class="footer">Youtube <i class="fa fa-youtube" style="font-size:2.4rem;color:lightblue;"></i></p>
+            
         </div>
 ​
     </footer>
