--- a/gallery.html
+++ b/gallery.html
@@ -82,9 +82,9 @@
             <p class="footer">"You are in a beauty contest every day of your life Treat Yourself"</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">Facebook <i class="fa fa-facebook" style="font-size:2.4rem;color:lightblue;"></i></p>
-            <p class="footer">Instagram <i class="fa fa-instagram" style="font-size:2.4rem;color:lightblue;"></i></p>
-            <p class="footer">Youtube <i class="fa fa-youtube" style="font-size:2.4rem;color:lightblue;"></i></p>
+            <p class="footer">Facebook <i class="fa fa-facebook"></i></p>
+            <p class="footer">Instagram <i class="fa fa-instagram"></i></p>
+            <p class="footer">Youtube <i class="fa fa-youtube"></i></p>
         </div>
 ​
     </footer>
