--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 <div class="row">
         <div class="col-12 image">
-            <img src="https://c6b5e9d1-55e9-4e7e-845b-8fd2c4dc0ff9.ws-eu01.gitpod.io/mini-browser/workspace/beauty-salon/assets/css/images/home-picture.jpg"/>
+            <img src="assets/css/images/home-picture.jpg"/>
         </div>
     </div>
     <div class="row">
