--- a/gallery.html
+++ b/gallery.html
@@ -52,13 +52,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="https://c6b5e9d1-55e9-4e7e-845b-8fd2c4dc0ff9.ws-eu01.gitpod.io/mini-browser/workspace/beauty-salon/assets/css/images/make-up.jpeg" alt="Make Up">
+                <img class="d-block w-100" src="assets/css/images/make-up.jpeg" alt="Make Up">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://c6b5e9d1-55e9-4e7e-845b-8fd2c4dc0ff9.ws-eu01.gitpod.io/mini-browser/workspace/beauty-salon/assets/css/images/permanent-make-up.jpg" alt="Permanent-Make up">
+                <img class="d-block w-100" src="assets/css/images/permanent-make-up.jpg" alt="Permanent-Make up">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://c6b5e9d1-55e9-4e7e-845b-8fd2c4dc0ff9.ws-eu01.gitpod.io/mini-browser/workspace/beauty-salon/assets/css/images/hair.jpeg" alt="Hair">
+                <img class="d-block w-100" src="assets/css/images/hair.jpeg" alt="Hair">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
