--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,10 @@
     </div>
 ​
     <!--End of Nav-bar-->
+    <div class="row">
+        <div class="col-12">
+            <h1 class="main-tagline text-center"><em>The place for all your beauty needs</em></h1>
+        </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
