--- a/video.html
+++ b/video.html
@@ -45,7 +45,10 @@
     </div>
 ​
     <!--End of Nav-bar-->
-​
+​<div class="row">
+        <div class="col-12">
+            <h1 class="main-tagline text-center"><em>The place for all your beauty needs</em></h1>
+        </div>
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6eeldaXgz-c?rel=0" allowfullscreen></iframe>
     </div>
