added heading,list of treatments

--- a/index.html
+++ b/index.html
@@ -58,37 +58,38 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-12">
+            <h1 class="main-tagline text-center"><em>We provide best quality service and products. Your happiness is our goal.</em></h1>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-12 col-lg-4">     <!-------------------home-page-------------->
-            <p class="home-page">We provide best quality service and products. Your happiness is our goal.
-             NAIL TREATMENTS :
-
-             Manicures   
-
-            Pedicures
-
-            Gel extensions.</p>
+            <h2 class="home-page">NAIL TREATMENTS</h2>
+            <ul>
+            <li>Manicures</li>
+            <li>Pedicures</li>
+            <li>Gel Extensions</li>
+            <li>Acrylics</li>
+            </ul>
         </div>
         <div class="col-12 col-lg-4">
-            <p class="home-page">FACE TREATMENTS:
-
-            Eyebrow Shape
-
-            Eyebrow Tint
-
-            Dermalogica Facials.
-          </p>
+            <h2 class="home-page">FACE TREATMENTS</h2>
+            <ul>
+            <li>Eyebrow Shape</li>
+            <li>Eyebrow Tint</li>
+            <li> Dermalogica Facials</li>
+            <li>Make Up</li>
+            <li>Permanent Make-up</li>
+            </ul>
         </div>
         <div class="col-12 col-lg-4">
-            <p class="home-page">HAIR TREATMENTS:
-
-            Blowdry
-
-            Haircuts
-
-            Highlights 
-            
-              Colour.
-              </p>
+            <h2 class="home-page">HAIR TREATMENTS</h2>
+            <ul>
+            <li>Blowdry</li>
+            <li>Haircuts</li>
+            <li>Highlights</li>
+            <li>Colour</li>
+            </ul>
         </div>
     </div>        <!-------------------------footer---------------->
     <footer class="row bordered mt-3">
