--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-12">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">Beauty Salon</a>
+                <a class="navbar-brand" href="#">Xhulja Beauty Salon</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,8 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <h1 class="main-tagline text-center"><em>We provide best quality service and products. Your happiness is our goal.</em></h1>
+            <h1 class="main-tagline text-center"><em>We provide best quality service and products.</em></h1>
+            <h1 class="main-tagline text-center"><em>Your happiness is our goal.</em></h1>
         </div>
     </div>
     <div class="row">
@@ -100,9 +101,7 @@
             <p class="footer">Ireland</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">"You are in a beauty contest every day of your life
-            
-            Treat Yourself"</p>
+            <p class="footer">"You are in a beauty contest every day of your life.Treat Yourself"</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
             <p class="footer">Facebook <i class="fa fa-facebook"></i></p>
