--- a/index.html
+++ b/index.html
@@ -100,12 +100,15 @@
             <p class="footer">City Centre</p>
             <p class="footer">Cork</p>
             <p class="footer">Ireland</p>
+            <h2>Phone Number :</h2>
+            <p>0851045159</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
             <h3 class="main-tagline text-center"><em>"You are in a beauty contest every day of your life.</em></h3>
             <h3 class="main-tagline text-center"><em>Treat Yourself."</em></h3>
         </div>
         <div class="col-12 col-lg-4 mt-2">
+        <h2>Social Networks :</h2>
         <ul>
         <li><a class="social-link" href="https://www.facebook.com/Julia-Nails-Cork-1695130630746388/">Facebook <i class="fa fa-facebook"></i></a></li>
         <li><a class="social-link" href="https://www.instagram.com/julia_nails1/">Instagram <i class="fa fa-instagram"></i></a></li>
