updated the tittle,added phone number

--- a/contact.html
+++ b/contact.html
@@ -126,10 +126,13 @@
 ​
     <footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
+        <h2>Address :</h2>
             <p class="footer">Georges Quay</p>
             <p class="footer">City Centre</p>
             <p class="footer">Cork</p>
             <p class="footer">Ireland</p>
+            <h2>Phone Number :</h2>
+            <p>0851045159</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
             <p class="footer">"You are in a beauty contest every day of your life Treat Yourself"</p>
