--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-12">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#n">Beauty Salon</a>
+                <a class="navbar-brand" href="#n">Xhulja Beauty Salon</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,10 +78,13 @@
 ​
     <footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
+        <h2>Address :</h2>
             <p class="footer">Georges Quay</p>
             <p class="footer">City Center</p>
             <p class="footer">Cork</p>
             <p class="footer">Ireland</p>
+            <h2>Phone Number :</h2>
+            <p>0851045159</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
             <p class="footer">"You are in a beauty contest every day of your life Treat Yourself"</p>
