added social networks links

--- a/video.html
+++ b/video.html
@@ -64,12 +64,16 @@
             <p>0851045159</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">"You are in a beauty contest every day of your life Treat Yourself"</p>
+            <h3 class="main-tagline text-center"><em>"You are in a beauty contest every day of your life.</em></h3>
+            <h3 class="main-tagline text-center"><em>Treat Yourself."</em></h3>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <p class="footer">Facebook <i class="fa fa-facebook"></i></p>
-            <p class="footer">Instagram <i class="fa fa-instagram"></i></p>
-            <p class="footer">Youtube <i class="fa fa-youtube"></i></p>
+            <h2>Social Networks :</h2>
+        <ul>
+        <li><a class="social-link" href="https://www.facebook.com/Julia-Nails-Cork-1695130630746388/">Facebook <i class="fa fa-facebook"></i></a></li>
+        <li><a class="social-link" href="https://www.instagram.com/julia_nails1/">Instagram <i class="fa fa-instagram"></i></a></li>
+        <li><a class="social-link" href="https://www.youtube.com/embed/6eeldaXgz-c?rel=0">Youtube <i class="fa fa-youtube"></i></a></li>
+        </ul>
         </div>
 ​
     </footer>
