deleted unnecessary spaces

--- a/gallery.html
+++ b/gallery.html
@@ -2,18 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-​
-    <title>Beauty Salon</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+​<title>Beauty Salon</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-<!--Navbar Section Imported from Bootstrap-->
+<body>                            <!--Navbar Section Imported from Bootstrap-->
 <div class="container">
     <div class="row">
         <div class="col-12">
@@ -42,9 +38,7 @@
                 </div>
             </nav>
         </div>
-    </div>
-​
-    <!--End of Nav-bar-->
+    </div>                                 <!--End of Nav-bar-->
     <div class="row">
         <div class="col-12">
             <h1 class="main-tagline text-center"><em>The place for all your beauty needs</em></h1>
@@ -75,8 +69,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-​
-    <footer class="row bordered mt-3">
+<footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
         <h2>Address :</h2>
             <p class="footer">Georges Quay</p>
@@ -91,17 +84,15 @@
             <h3 class="main-tagline text-center"><em>Treat Yourself."</em></h3>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <h2>Social Networks :</h2>
+            <h2>Social Networks </h2>
         <ul>
         <li><a class="social-link" href="https://www.facebook.com/Julia-Nails-Cork-1695130630746388/">Facebook <i class="fa fa-facebook"></i></a></li>
         <li><a class="social-link" href="https://www.instagram.com/julia_nails1/">Instagram <i class="fa fa-instagram"></i></a></li>
         <li><a class="social-link" href="https://www.youtube.com/embed/6eeldaXgz-c?rel=0">Youtube <i class="fa fa-youtube"></i></a></li>
         </ul>
         </div>
-​
-    </footer>
+​</footer>
 </div>
-</body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
