--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-​
-    <title>Beauty Salon</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+​<title>Beauty Salon</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-<!--Navbar Section Imported from Bootstrap-->
+<body>                         <!--Navbar Section Imported from Bootstrap-->
 <div class="container">
     <div class="row">
         <div class="col-12">
@@ -42,49 +38,29 @@
                 </div>
             </nav>
         </div>
-    </div>
-​
-    <!--End of Nav-bar-->
+    </div>                     <!--End of Nav-bar-->
     <!--Section: Contact v.2-->
-    <section class="mb-4">
-​
-        <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-        <!--Section description-->
+    <section class="mb-4">                            <!--Section heading-->
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>     <!--Section description-->
         <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
             a matter of hours to help you.</p>
-​
-        <div class="row">
-​
-            <!--Grid column-->
+<div class="row">                                     <!--Grid column-->
             <div class="col-md-12 mb-md-0 mb-5">
-                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-​
-                    <!--Grid row-->
-                    <div class="row">
-​
-                        <!--Grid column-->
+                <form id="contact-form" name="contact-form" action="mail.php" method="POST">  
+                    <div class="row">                
                         <div class="col-md-6">
                             <div class="md-form mb-0">
                                 <input type="text" id="name" name="name" class="form-control">
                                 <label for="name" class="">Your name</label>
                             </div>
                         </div>
-                        <!--Grid column-->
-​
-                        <!--Grid column-->
                         <div class="col-md-6">
                             <div class="md-form mb-0">
                                 <input type="text" id="email" name="email" class="form-control">
                                 <label for="email" class="">Your email</label>
                             </div>
                         </div>
-                        <!--Grid column-->
-​
-                    </div>
-                    <!--Grid row-->
-​
-                    <!--Grid row-->
+                    </div>                          <!--Grid row-->
                     <div class="row">
                         <div class="col-md-12">
                             <div class="md-form mb-0">
@@ -93,38 +69,24 @@
                             </div>
                         </div>
                     </div>
-                    <!--Grid row-->
-​
-                    <!--Grid row-->
-                    <div class="row">
-​
-                        <!--Grid column-->
+                    <div class="row">                              <!--Grid column-->
                         <div class="col-md-12">
-​
-                            <div class="md-form">
+                         <div class="md-form">
                                 <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
                                 <label for="message">Your message</label>
                             </div>
 ​
                         </div>
-                    </div>
-                    <!--Grid row-->
-​
-                </form>
-​
-                <div class="text-center text-md-left">
-                    <a class="btn btn-light btn-lg" onclick="document.getElementById('contact-form').submit();">Send</a>
-                </div>
-                <div class="status"></div>
-            </div>
-            <!--Grid column-->
-​
-        </div>
-​
-    </section>
-    <!--Section: Contact v.2-->
-​
-    <footer class="row bordered mt-3">
+                    </div>                     <!--Grid row-->
+ </form>
+​<div class="text-center text-md-left">
+ <a class="btn btn-light btn-lg" onclick="document.getElementById('contact-form').submit();">Send</a>
+</div>
+<div class="status"></div>
+ </div>                                  <!--Grid column-->
+​</div>
+​ </section>                   
+​<footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
         <h2>Address :</h2>
             <p class="footer">Georges Quay</p>
@@ -139,17 +101,15 @@
             <h3 class="main-tagline text-center"><em>Treat Yourself."</em></h3>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <h2>Social Networks :</h2>
+            <h2>Social Networks </h2>
         <ul>
         <li><a class="social-link" href="https://www.facebook.com/Julia-Nails-Cork-1695130630746388/">Facebook <i class="fa fa-facebook"></i></a></li>
         <li><a class="social-link" href="https://www.instagram.com/julia_nails1/">Instagram <i class="fa fa-instagram"></i></a></li>
         <li><a class="social-link" href="https://www.youtube.com/embed/6eeldaXgz-c?rel=0">Youtube <i class="fa fa-youtube"></i></a></li>
         </ul>
         </div>
-​
-    </footer>
+​ </footer>
 </div>
-</body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
