--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 <div class="row">
         <div class="col-12 image">
-            <img src="assets/css/images/home-picture.jpg"/>
+            <img src="assets/css/images/home-picture.jpg" alt="nails"/>
         </div>
     </div>
     <div class="row">
