--- a/video.html
+++ b/video.html
@@ -41,7 +41,7 @@
         </div>                                         <!--End of Nav-bar-->
         <div class="row">
         <div class="col-12">
-            <h1 class="main-tagline text-center">The place for all your beauty needs</h1>
+            <h1 class="main-tagline text-center"><em>The place for all your beauty needs</em></h1>
         </div>
         <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6eeldaXgz-c?rel=0" allowfullscreen></iframe>
@@ -57,8 +57,8 @@
             <p>0851045159</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <h3 class="main-tagline text-center">"You are in a beauty contest every day of your life.</h3>
-            <h3 class="main-tagline text-center">Treat Yourself."</h3>
+            <h3 class="main-tagline text-center"><em>"You are in a beauty contest every day of your life.</em></h3>
+            <h3 class="main-tagline text-center"><em>Treat Yourself."</em></h3>
         </div>
         <div class="col-12 col-lg-4 mt-2">
             <h2>Social Networks </h2>
